--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url = jdbc:mysql://localhost:3306/productdb
+spring.datasource.url = jdbc:mysql://localhost:3306/productnewdb
 
 spring.datasource.username = root
 
@@ -8,7 +8,7 @@ spring.datasource.password =
 
 spring.jpa.show-sql = true
 
-
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
